--- a/bookmanagerservice/src/main/AndroidManifest.xml
+++ b/bookmanagerservice/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".BookService"
+            android:name=".MainService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
